@@ -1,10 +1,8 @@
 package test.dataprovider.issue1987;
 
 import org.testng.annotations.DataProvider;
-import org.testng.annotations.Listeners;
 import org.testng.annotations.Test;
 
-@Listeners(DataProviderTrackingListener.class)
 public class DataProviderInSameClass {
 
   @Test(dataProvider = "dp")
