@@ -179,6 +179,7 @@
       <class name="test.listeners.github1602.IssueTest"/>
       <class name="test.listeners.issue1777.IssueTest"/>
       <class name="test.listeners.issue1632.IssueTest"/>
+      <class name="test.listeners.issue2220.IssueTest"/>
       <class name="test_result.GitHub1197Test"/>
       <class name="test_result.issue1590.IssueTest"/>
       <class name="test.listeners.github1319.TestResultInstanceCheckTest"/>
